--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ header.dark {
     color-scheme: dark;
     --color-background: #212121;
     --color-on-background: white;
-    --color-background-hover: #27262c;
+    --color-background-hover: #1f193e;
     --color-on-background-hover: white;
     --color-primary: #370000;
     --color-primary-disabled: #1f213c;
