--- a/css/main.css
+++ b/css/main.css
@@ -14,9 +14,9 @@ header.dark {
     color-scheme: dark;
     --color-background: #212121;
     --color-on-background: white;
-    --color-background-hover: #1f193e;
+    --color-background-hover: #300000;
     --color-on-background-hover: white;
-    --color-primary: #370000;
+    --color-primary: #300000;
     --color-primary-disabled: #1f213c;
     --color-on-primary: white;
     --color-error: #de0000;
