--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
+    --color-on-link: #0077EB;
 }
 
 main.dark,
@@ -21,6 +22,7 @@ header.dark {
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
+    --color-on-link: #0077EB;
 }
 
 html,
