--- a/css/pages/leaderboard.css
+++ b/css/pages/leaderboard.css
@@ -48,7 +48,7 @@
 }
 .page-leaderboard .board .user button {
     background-color: var(--color-background);
-    color: var(--color-on-link);
+    color: var(--color-on-background);
     border: none;
     border-radius: 0.5rem;
     padding: 1rem;
