--- a/css/pages/list.css
+++ b/css/pages/list.css
@@ -93,6 +93,7 @@
 .page-list .meta-container .og a:hover,
 .page-list .level-container .level .records a:hover {
     text-decoration: underline;
+    color: var(--color-on-link);
 }
 .page-list .meta {
     display: flex;
