--- a/css/pages/list.css
+++ b/css/pages/list.css
@@ -74,6 +74,7 @@
 }
 .page-list .level-container .level .records {
     table-layout: fixed;
+    color: var(--color-on-link);
 }
 .page-list .level-container .level .records tr td:not(:last-child) {
     padding-right: 1rem;
