--- a/css/pages/list.css
+++ b/css/pages/list.css
@@ -121,6 +121,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    color: var(--color-on-link);
 }
 .page-list .meta .editors li img {
     height: 1.25rem;
