--- a/css/pages/leaderboard.css
+++ b/css/pages/leaderboard.css
@@ -87,6 +87,7 @@
 }
 .page-leaderboard .player .table .level {
     width: 100%;
+    color: var(--color-on-link);
 }
 .page-leaderboard .player .table a:hover {
     text-decoration: underline;
